fixed z-index of arrows and overflow

--- a/scss/partials/_slider.scss
+++ b/scss/partials/_slider.scss
@@ -54,6 +54,7 @@
       top: 20%;
       left:1%;
       font-size: 40px;
+      z-index: 1;
 
       i{
         padding: 30vh 10vw 30vh 0;
@@ -69,6 +70,7 @@
       top: 20%;
       right:1%;
       font-size: 40px;
+      z-index: 1;
 
       i{
         padding: 30vh 0 30vh 10vw;
